cybos connection