@@ -1,5 +1,10 @@
 package com.example.demo.util;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+
 import org.springframework.stereotype.Component;
 import dashin.cputil.*;
 /*
@@ -13,10 +18,12 @@ public class CybosConnection {
 	
 	
 	private ICpCybos cybos = ClassFactory.createCpCybos();
-	public void connectionCheck() {
+	public void connectionCheck() throws IOException {
 		int connetcionStatus = cybos.isConnect();
 		if(connetcionStatus==0) {
 			//연결 안됨 => 로그인 구현 후 로그인으로
+			CybosConnection cyCon = new CybosConnection();
+			cyCon.runCybos();
 		}else if(connetcionStatus==1) {
 			//시세 조회만 가능
 		}else {
@@ -27,12 +34,15 @@ public class CybosConnection {
 	}
 	
 	
-	public void runCybos(String id, String pwd, String pwdcert) {
-		  try {
-			    Process p = Runtime.getRuntime().exec("runas C:\\Daishin\\Starter\\ncStarter.exe /id:"+id+"/pwd:"+pwd+"/pwdcert:"+pwdcert+"/prj:cp /autostart");
-			    
-			  } catch (Exception e) {
-			    System.err.println(e);
-			  }
+	public void runCybos() throws IOException {
+		String[] command = new String[] {"C:\\DAISHIN\\STARTER\\ncStarter.exe","/prj:cp","/id:kiki3700","/pwd:Lo50!@","/pwdcert:Lolo5050!@", "/autostart"};
+		Process process = new ProcessBuilder(command).start();
+		InputStream is = process.getInputStream();//Get an inputstream from the process which is being executed
+		InputStreamReader isr = new InputStreamReader(is);
+		BufferedReader br = new BufferedReader(isr);
+		String line;
+		while ((line = br.readLine()) != null) {
+		System.out.println(line);//Prints all the outputs.Which is coming from the executed Process
 		}
+	}
 }
